# rasbpi-linetracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h  init.c  main.c  main.cpp  run.sh
AI/: dataExtractor.py  learn.py  resizeImg.py  tester.py
AI/fitted/: saved_model.pb
AI/fitted/variables/: variables.data-00000-of-00001  variables.index
